creusot/tests/should_fail/prusti/invalid_state/pre_logic.stderr
error[creusot]: 'pre can only be used in specifications of program functions
 --> pre_logic.rs:5:9
  |
5 | fn test<'pre>(x: u32) -> u32 {
  |         ^^^^

error: aborting due to previous error

